@@ -1,18 +1,74 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.ofpay</groupId>
-        <artifactId>of-parent</artifactId>
-        <version>1.1.0-RELEASE</version>
-    </parent>
+    <!--<parent>-->
+        <!--<groupId>com.ofpay</groupId>-->
+        <!--<artifactId>of-parent</artifactId>-->
+        <!--<version>1.1.0-RELEASE</version>-->
+    <!--</parent>-->
 
     <groupId>com.ofpay</groupId>
     <artifactId>FourthPay-hermes</artifactId>
     <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <description>
+        2013-9-29 更新纪录
+        将仓库地址从
+        http://192.168.100.87:8081/
+        修改为
+        http://nexus.dev.ofpay.com/
+
+        2013-8-28 更新纪录
+        将参数中内存使用1024修改为：-Xmx1500m -XX:MaxPermSize=256m
+
+
+        2013-7-13 更新纪录
+        相对1.0.16的更新
+        cobar-client组建增加对slf4j-jcl的排除
+
+        2013-7-11 更新纪录
+        相对1.0.15的更新
+        1、更新dubbo版本到2.4.10
+        2、更新memcache版本到1.4.1
+        3、更新slf4j版本到1.7.5
+        4、更新mina版本到2.0.7
+        5、更新cobarclient版本到1.0.3-update2
+        6、更新junit版本到4.11
+        7、更新joda-time版本到2.2
+        8、更新h2database版本到1.3.172
+
+        相对1.0.15的增加
+        1、增加spring ldap 1.3.1－RELEASE
+        2、增加logback 1.0.12版本
+        3、增加 Apache Commons 3 组建
+        4、增加mybatis 3.2.0版本
+        5、增加oracle ojdbc6 11.1.0.7.0版本
+        6、增加validation-api接口和实现
+    </description>
+
     <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <dubbo.version>2.4.10</dubbo.version>
+        <springframework.version>3.1.1.RELEASE</springframework.version>
+        <spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
+        <quartz.version>1.6.3</quartz.version>
+        <activemq.version>5.5.1</activemq.version>
+        <jackson.version>1.9.8</jackson.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <mina.version>2.0.7</mina.version>
+        <mina.spring.version>1.1.7</mina.spring.version>
+        <redisclient.version>2.1.0</redisclient.version>
+        <httpcomponents.version>4.1.3</httpcomponents.version>
+        <aspectj.version>1.6.12</aspectj.version>
+        <unitils.version>3.3</unitils.version>
+        <cobarclient.version>1.0.3-update2</cobarclient.version>
+        <logback.version>1.0.12</logback.version>
+
         <svn.url>http://192.168.100.249/usvn/svn/4thpay-hermes/trunk/code/FourthPay-hermes/</svn.url>
         <dubbo.version>2.4.10</dubbo.version>
         <springframework.version>3.2.4.RELEASE</springframework.version>
@@ -28,18 +84,18 @@
     </scm>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <tagBase>http://192.168.100.249/usvn/svn/4thpay-hermes/tags/</tagBase>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <username>${svn.username}</username>
-                    <password>${svn.password}</password>
-                </configuration>
-            </plugin>
-        </plugins>
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-release-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<tagBase>http://192.168.100.249/usvn/svn/4thpay-hermes/tags/</tagBase>-->
+                    <!--<autoVersionSubmodules>true</autoVersionSubmodules>-->
+                    <!--<username>${svn.username}</username>-->
+                    <!--<password>${svn.password}</password>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
     </build>
 
 
@@ -472,6 +528,49 @@
         </dependencies>
 
     </dependencyManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>ofpay-releases</id>
+            <name>releases</name>
+            <url>http://nexus.dev.ofpay.com/nexus/content/repositories/releases</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>ofpay-snapshots</id>
+            <name>snapshots</name>
+            <url>http://nexus.dev.ofpay.com/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>ofpay-snapshots</id>
+            <name>intranet public snapshots</name>
+            <url>http://nexus.dev.ofpay.com/nexus/content/repositories/snapshots</url>
+            <snapshots>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>central</id>
+            <url>http://nexus.dev.ofpay.com/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <url>http://nexus.dev.ofpay.com/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
     <modules>
         <module>FourthPay-hermes-bean</module>
